Disabled dev shm usage & added Audio status check

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
+.vscode
 assest
 main backup 1.py
 main backup 2.py
-C:\Users\Administrator\AppData\Local\Programs\Python\Python311\Lib\site-packages\whatsappcloud\config.py
