--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,11 +9,10 @@ dependencies = [
     "ipykernel>=6.30.1",
     "pyautogui>=0.9.54",
     "python-dotenv>=1.1.1",
-    "python-whatsapp-bot>=2.0.3",
     "pytz==2021.3",
     "selenium==4.8.2",
-    "whatsappcloud==0.0.5",
-    "beautifulsoup4==4.13.5"
+    "beautifulsoup4==4.13.5",
+    "callmebot @ git+https://github.com/KrAsH-CoD3/gabrielrih-callmebot.git@refactor/codebase"
 ]
 
 [tool.setuptools.packages.find]
