--- a/requirements.txt
+++ b/requirements.txt
@@ -11,4 +11,4 @@ pytz>=2021.3
 python-dotenv>=1.1.1
 selenium>=4.8.2
 beautifulsoup4>=4.13.5
-git+https://github.com/KrAsH-CoD3/gabrielrih-callmebot.git@refactor/codebase
+git+https://github.com/KrAsH-CoD3/gabrielrih-callmebot.git
