chore: Update dependencies and configuration in pyproject.toml and requirements.txt
- Changed art dependency to allow for any version greater than or equal to 5.9.
- Added beautifulsoup4 and callmebot dependencies with version specifications.
- Updated pytz and selenium dependencies to allow for any version greater than or equal to the specified versions.
- Modified the virtual environment name in requirements.txt for clarity.
- Added a new section in pyproject.toml for the callmebot source from GitHub.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # REQUIRED PIP INSTALLATIONS
 
 # Enter the command in your termial in this project folder
-# python -m venv wa-viewer-env
+# python -m venv wsc-venv
 # pip install -r requirements.txt
 
 art>=5.9
