--- a/requirements.txt
+++ b/requirements.txt
@@ -11,4 +11,5 @@ pytz>=2021.3
 python-dotenv>=1.1.1
 selenium>=4.8.2
 beautifulsoup4>=4.13.5
+requests>=2.28.0
 git+https://github.com/KrAsH-CoD3/gabrielrih-callmebot.git
